V2 ETA + Multiple Jobs

--- a/CodeForCoronaBaseFile/Base.lproj/Main.storyboard
+++ b/CodeForCoronaBaseFile/Base.lproj/Main.storyboard
@@ -37,20 +37,23 @@
                                     <action selector="Location:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5om-65-S4S"/>
                                 </connections>
                             </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3io-gd-ze2">
+                            <scrollView autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3io-gd-ze2">
                                 <rect key="frame" x="20" y="123" width="335" height="530"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="432-5Q-h7Z">
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="equalSpacing" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="432-5Q-h7Z">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="530"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="335" id="JJG-fL-vzx"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="centerX" secondItem="3io-gd-ze2" secondAttribute="centerX" id="2QV-Cz-Grv"/>
-                                    <constraint firstAttribute="trailing" secondItem="432-5Q-h7Z" secondAttribute="trailing" id="LYa-G5-KMJ"/>
-                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="top" secondItem="3u6-Cl-bEI" secondAttribute="top" id="Xiz-qQ-tIM"/>
-                                    <constraint firstAttribute="bottom" secondItem="432-5Q-h7Z" secondAttribute="bottom" id="Zfc-M2-CzA"/>
-                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="leading" secondItem="3u6-Cl-bEI" secondAttribute="leading" id="uOI-oM-KyZ"/>
-                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="bottom" secondItem="3u6-Cl-bEI" secondAttribute="bottom" id="wF4-2d-2pm"/>
+                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="leading" secondItem="3io-gd-ze2" secondAttribute="leading" id="H1L-Rk-eOb"/>
+                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="top" secondItem="3io-gd-ze2" secondAttribute="top" id="N6C-cs-aUo"/>
+                                    <constraint firstAttribute="bottom" secondItem="432-5Q-h7Z" secondAttribute="bottom" id="Txd-vD-4xu"/>
+                                    <constraint firstAttribute="trailing" secondItem="432-5Q-h7Z" secondAttribute="trailing" id="cJM-Jp-Gtg"/>
+                                    <constraint firstAttribute="width" constant="335" id="t1A-d0-SPI"/>
+                                    <constraint firstItem="432-5Q-h7Z" firstAttribute="bottom" secondItem="3u6-Cl-bEI" secondAttribute="bottom" id="waC-Te-M1Y"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="eqg-LJ-0iw"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="3u6-Cl-bEI"/>
@@ -58,19 +61,20 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="3io-gd-ze2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="EH7-jk-Cqc"/>
                             <constraint firstItem="WFC-3i-uIT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="KGy-OV-rLA"/>
-                            <constraint firstItem="3io-gd-ze2" firstAttribute="top" secondItem="8U5-03-D8P" secondAttribute="bottom" constant="8" id="OP4-pU-UYt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3io-gd-ze2" secondAttribute="trailing" constant="20" id="OQ1-BZ-taz"/>
                             <constraint firstItem="8U5-03-D8P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UEx-sP-cLY"/>
-                            <constraint firstItem="3io-gd-ze2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="bSL-lo-aPx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3io-gd-ze2" secondAttribute="bottom" constant="14" id="bfB-4A-0w6"/>
+                            <constraint firstItem="3io-gd-ze2" firstAttribute="top" secondItem="8U5-03-D8P" secondAttribute="bottom" constant="8" id="do8-BK-ht5"/>
                             <constraint firstItem="8U5-03-D8P" firstAttribute="top" secondItem="WFC-3i-uIT" secondAttribute="bottom" constant="8" id="jWh-o8-anG"/>
-                            <constraint firstItem="3io-gd-ze2" firstAttribute="centerX" secondItem="8U5-03-D8P" secondAttribute="centerX" id="oqz-fz-IcD"/>
+                            <constraint firstItem="3io-gd-ze2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m8Q-V2-20t"/>
                             <constraint firstItem="WFC-3i-uIT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s7d-wA-Nb4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="Scroll" destination="3io-gd-ze2" id="UWc-Wj-EfE"/>
+                        <outlet property="SearchLabel" destination="8U5-03-D8P" id="SFj-aJ-ALJ"/>
                         <outlet property="SearchLocation" destination="8U5-03-D8P" id="VNQ-r2-CAQ"/>
                         <outlet property="Stack" destination="432-5Q-h7Z" id="ePp-cy-x8L"/>
                     </connections>
